--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@supabase/ssr": "0.5.2",
+    "@supabase/supabase-js": "2.49.4",
+    "@types/uuid": "^10.0.0",
     "ai": "^4.1.63",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -51,6 +54,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
+    "openai": "^4.93.0",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
@@ -60,10 +64,9 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "vaul": "^0.9.6",
-    "zod": "^3.24.1",
-    "@supabase/supabase-js": "2.49.1",
-    "@supabase/ssr": "0.5.2"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22",
